// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reusable Components DefaultSettingCheckBoxWithTrueAndFalse 1`] = `
<div>
  <div
    class="bp3-form-group"
  >
    <div
      class="bp3-form-content"
    >
      <label
        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox defaultSettingRenderer StyledProps--main StyledProps--inline"
      >
        <input
          name="check"
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        
      </label>
    </div>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingCheckBoxWithTrueAndFalse with different labels 1`] = `
<div>
  <div
    class="bp3-form-group"
  >
    <div
      class="bp3-form-content"
    >
      <label
        class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox defaultSettingRenderer StyledProps--main StyledProps--inline"
      >
        <input
          name="check"
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        
      </label>
    </div>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingRadioBtnWithTrueAndFalse 1`] = `
<div>
  <div>
    <label
      class="bp3-control bp3-radio bp3-inline"
    >
      <input
        name="nbr"
        type="radio"
        value="true"
      />
      <span
        class="bp3-control-indicator"
      />
      common.true
    </label>
    <label
      class="bp3-control bp3-radio bp3-inline"
    >
      <input
        name="nbr"
        type="radio"
        value="false"
      />
      <span
        class="bp3-control-indicator"
      />
      common.false
    </label>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingStringDropDown 1`] = `
<div>
  <div
    class="bp3-form-group defaultSettingRenderer"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-popover-wrapper Select--main bp3-fill"
      >
        <div
          class="bp3-popover-target"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="drpdown"
              placeholder="- Select -"
              style="padding-right: 0px;"
              type="text"
              value="bcd"
            />
            <span
              class="bp3-input-action"
            >
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
        <div
          class="bp3-overlay bp3-overlay-inline"
        >
          <div
            class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
            style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
          >
            <div
              class="bp3-popover bp3-minimal bp3-select-popover Select--popover"
            >
              <div
                class="bp3-popover-content"
              >
                <div>
                  <ul
                    class="bp3-menu"
                  >
                    <li
                      class="Select--menuItem Select--active"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                        style="--text-line-clamp: 1;"
                      >
                        abcd
                      </p>
                    </li>
                    <li
                      class="Select--menuItem"
                    >
                      <p
                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                        style="--text-line-clamp: 1;"
                      >
                        bcd
                      </p>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Reusable Components DefaultSettingTextbox 1`] = `
<div>
  <div
    class="bp3-form-group defaultSettingRenderer"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-input-group"
      >
        <input
          autocomplete="off"
          class="bp3-input"
          name="nbr"
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Reusable Components no DefaultSettingStringDropDown 1`] = `<div />`;

exports[`Reusable Components text box 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-form-group defaultSettingRenderer"
    >
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="textbx"
            type="text"
            value="user name"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
